--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,9 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="gray">#A5A5A5</color>
     <color name="white">#FFFFFFFF</color>
     <color name="biru">#6C63FF</color>
     <color name="hitam">#2F2E41</color>
+    <color name="red">#DC3545</color>
 </resources>
