--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,11 +23,53 @@
         app:layout_constraintTop_toBottomOf="@id/btnProfile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="10dp"
         app:iss_auto_cycle="true"
-        app:iss_period="1000"
-        />
+        app:iss_period="1000" />
 
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvNewsUpdate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/news_update"
+        android:textColor="@color/hitam"
+        android:textSize="16sp"
+        app:layout_constraintTop_toBottomOf="@id/imgSlider"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_margin="20dp"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvNews"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvNewsUpdate" />
+
+    <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/tvNewsProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/news_product"
+        android:textColor="@color/hitam"
+        android:textSize="16sp"
+        android:layout_margin="20dp"
+        app:layout_constraintTop_toBottomOf="@id/rvNews"
+        app:layout_constraintStart_toStartOf="parent"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvProduct"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvNewsProduct" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
@@ -39,4 +81,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:menu="@menu/menu"
         android:scrollIndicators="left"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
