--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -9,9 +9,9 @@
         android:icon="@drawable/ic_favorite"
         android:title="@string/favorite" />
     <item
-        android:id="@+id/cart"
-        android:icon="@drawable/ic_cart"
-        android:title="@string/Cart" />
+        android:id="@+id/history"
+        android:icon="@drawable/ic_history"
+        android:title="@string/history" />
     <item
         android:id="@+id/account"
         android:icon="@drawable/ic_account"
