--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -69,6 +69,7 @@
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
+        tools:listitem="@layout/item_product"
         app:layout_constraintTop_toBottomOf="@id/tvNewsProduct" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
