--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -29,7 +29,7 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvProduct"
+        android:id="@+id/setProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/product"
@@ -41,14 +41,14 @@
         app:layout_constraintEnd_toEndOf="parent"/>
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/tvHarga"
+        android:id="@+id/setHarga"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/harga"
         android:textColor="@color/hitam"
         android:textSize="20sp"
         android:layout_marginTop="5dp"
-        app:layout_constraintTop_toBottomOf="@id/tvProduct"
+        app:layout_constraintTop_toBottomOf="@id/setProduct"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
 
