--- a/app/src/main/res/layout/item_product.xml
+++ b/app/src/main/res/layout/item_product.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cvProduct"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -38,7 +39,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/hitam"
                 android:textSize="20sp"
-                android:text="Name"
+                android:text="@string/name"
                 android:maxLines="2"
                 android:ellipsize="start"
                 android:layout_marginBottom="10dp"
