--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -23,8 +23,8 @@
 
             <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/newsPhoto"
-                android:layout_width="50dp"
-                android:layout_height="100dp"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
                 android:scaleType="centerCrop"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +33,7 @@
 
             <TextView
                 android:id="@+id/newsTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:textAlignment="center"
@@ -41,7 +41,7 @@
                 android:textSize="20sp"
                 android:text="@string/name"
                 android:maxLines="2"
-                android:ellipsize="start"
+                android:ellipsize="end"
                 android:layout_marginBottom="10dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
