--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -9,6 +9,7 @@
     android:orientation="vertical">
 
     <com.google.android.material.textview.MaterialTextView
+        android:id="@+id/profileTv"
         style="@style/TextAppearance.Material3.HeadlineMedium"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
