--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -61,6 +61,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
+        android:id="@+id/favDetail"
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:src="@drawable/baseline_favorite_border_24"
